--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
     </div>
     <header>
         <div class="sticky-top">
-            <nav class="navbar navbar-expand-lg navbar-custom">
+            <nav class="navbar navbar-dark navbar-expand-lg navbar-custom">
                 <div class="container">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
