--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" asp-controller="Studenti" asp-action="ModificaProfilo">Home</a>
                             </li>
 
                             <li class="nav-item dropdown">
@@ -118,7 +118,7 @@
         <div class="bg-dark text-white h-100">
             <div class="container d-flex justify-content-between align-items-end flex-wrap">
                 <div>
-                    <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
+                    <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3">
                     <p class="fs-4 ms-4 mb-0">Università UNIGen</p>
                     <p class="fs-6">Milano, Milano, MI 20100, IT</p>
                 </div>
