--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                 <!-- Pulsanti in alto a destra -->
                 <div class="d-flex gap-2">
                     <a href="#" class="btn btn-light btn-sm"><i class="bi bi-envelope"></i> Webmail</a>
-                    <a href="#" class="btn btn-light btn-sm"><i class="bi bi-person-circle"></i> Area riservata</a>
+                    <a  class="btn btn-light btn-sm" asp-area="" asp-controller="Login" asp-action="Login" ><i class="bi bi-person-circle"></i> Area riservata</a>
                 </div>
             </div>
 
