DDL, da controllare in base a view => comunicazioni => add

--- a/Comunicazioni/Views/Comunicazioni/Add.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/Add.cshtml
@@ -4,8 +4,7 @@
 
 @*INSERIMENTO FORM*@
 
-
-@model UniGen.Models.AddComunicazioneViewModel
+@model Comunicazioni.Models.AddComunicazioneViewModel
 
 @{
     ViewData["Title"] = "Nuova Comunicazione";
@@ -49,7 +48,7 @@
     </div>
 
     <div class="mt-4">
-        <button type="submit" class="btn btn-primary">Salva Comunicazione</button>
+        <button type="submit" class="btn btn-primary">Inserisci Comunicazione</button>
     </div>
 </form>
 
