--- a/Comunicazioni/Views/Shared/_Layout.cshtml
+++ b/Comunicazioni/Views/Shared/_Layout.cshtml
@@ -101,6 +101,9 @@
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Privacy</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-area="" asp-controller="Comunicazioni" asp-action="List">Comunicazioni</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
