--- a/Comunicazioni/Views/Comunicazioni/Add.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/Add.cshtml
@@ -18,31 +18,22 @@
     </div>
 
     <div class="mt-3">
-        <label class="form-label">Soggetto</label>
-        <input type="text" asp-for="Soggetto" class="form-control" maxlength="100" />
-        <span asp-validation-for="Soggetto" class="text-danger"></span>
+        <label class="form-label">Titolo: </label>
+        <input type="text" class="form-control" maxlength="100" />
     </div>
 
     <div class="mt-3">
-        <label class="form-label">Testo</label>
+        <label class="form-label">Testo: </label>
         <textarea asp-for="Testo" class="form-control" rows="4" maxlength="500"></textarea>
         <span asp-validation-for="Testo" class="text-danger"></span>
     </div>
 
     <div class="mt-3">
-        <label class="form-label">Studente</label>
-        <select asp-for="K_Studente" asp-items="ViewBag.StudentiList" class="form-select">
-            <option disabled selected>-- Seleziona uno studente --</option>
+        <label class="form-label">Esame: </label>
+        <select asp-for="K_Esame" asp-items="@ViewBag.EsamiList" class="form-select">
+            <option disabled selected>-- Seleziona un esame --</option>
         </select>
-        <span asp-validation-for="K_Studente" class="text-danger"></span>
-    </div>
-
-    <div class="mt-3">
-        <label class="form-label">Docente</label>
-        <select asp-for="K_Docente" asp-items="ViewBag.DocentiList" class="form-select">
-            <option disabled selected>-- Seleziona un docente --</option>
-        </select>
-        <span asp-validation-for="K_Docente" class="text-danger"></span>
+        <span asp-validation-for="K_Esame" class="text-danger"></span>
     </div>
 
     <div class="mt-4">
