--- a/Comunicazioni/Views/Shared/_Layout.cshtml
+++ b/Comunicazioni/Views/Shared/_Layout.cshtml
@@ -104,6 +104,9 @@
                             <li class="nav-item">
                                 <a class="nav-link active" asp-area="" asp-controller="Comunicazioni" asp-action="List">Comunicazioni</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-area="" asp-controller="Login" asp-action="Login">Login</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
