--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -99,11 +99,11 @@
 		</div>
 	</header>
 
-	<div class="container">
+	@* <div class="container"> *@
 		<main role="main" class="pb-3">
 			@RenderBody()
 		</main>
-	</div>
+	@* </div> *@
 
 	<footer>
 		<div class="bg-dark text-white h-100">
