--- a/AreaStudente/Views/Studenti/Show.cshtml
+++ b/AreaStudente/Views/Studenti/Show.cshtml
@@ -85,78 +85,68 @@
                 </div>
                 <div class="col-xl-8 order-xl-1">
                     <div class="card bg-secondary shadow">
-                        <div class="card-header bg-white border-0">
-                            <div class="row align-items-center">
-                                <div class="col-8">
-                                    <h3 class="mb-0">My account</h3>
-                                </div>
-                                <div class="col-4 text-right">
-                                    <a href="#!" class="btn btn-sm btn-primary">Settings</a>
-                                </div>
-                            </div>
-                        </div>
                         <div class="card-body">
                             <form>
-                                <h6 class="heading-small text-muted mb-4">User information</h6>
+                                <h6 class="heading-small text-muted mb-4">Informazioni Personali</h6>
                                 <div class="pl-lg-4">
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="form-group focused">
-                                                <label class="form-control-label" for="input-username">Username</label>
-                                                <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Username" value="lucky.jesse">
+                                                <label class="form-control-label" for="input-username">Username generato</label>
+                                                <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Username" value="">
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="form-group">
-                                                <label class="form-control-label" for="input-email">Email address</label>
-                                                <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="jesse@example.com">
+                                                <label class="form-control-label" for="input-email">Indirizzo Email</label>
+                                                <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="unigen@esempio.com">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="form-group focused">
-                                                <label class="form-control-label" for="input-first-name">First name</label>
-                                                <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="First name" value="Lucky">
+                                                <label class="form-control-label" for="input-first-name">Nome</label>
+                                                <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="Nome" value="">
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="form-group focused">
-                                                <label class="form-control-label" for="input-last-name">Last name</label>
-                                                <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" value="Jesse">
+                                                <label class="form-control-label" for="input-last-name">Cognome</label>
+                                                <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Cognome" value="">
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <hr class="my-4">
                                 <!-- Address -->
-                                <h6 class="heading-small text-muted mb-4">Contact information</h6>
+                                <h6 class="heading-small text-muted mb-4">Informazioni di Contatto</h6>
                                 <div class="pl-lg-4">
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="form-group focused">
-                                                <label class="form-control-label" for="input-address">Address</label>
-                                                <input id="input-address" class="form-control form-control-alternative" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09" type="text">
+                                                <label class="form-control-label" for="input-address">Indirizzo</label>
+                                                <input id="input-address" class="form-control form-control-alternative" placeholder="Indirizzo domicilio" value="" type="text">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-lg-4">
                                             <div class="form-group focused">
-                                                <label class="form-control-label" for="input-city">City</label>
-                                                <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="City" value="New York">
+                                                <label class="form-control-label" for="input-city">Città</label>
+                                                <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="Città" value="">
                                             </div>
                                         </div>
                                         <div class="col-lg-4">
                                             <div class="form-group focused">
-                                                <label class="form-control-label" for="input-country">Country</label>
-                                                <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Country" value="United States">
+                                                <label class="form-control-label" for="input-country">Paese</label>
+                                                <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Paese" value="">
                                             </div>
                                         </div>
                                         <div class="col-lg-4">
                                             <div class="form-group">
-                                                <label class="form-control-label" for="input-country">Postal code</label>
-                                                <input type="number" id="input-postal-code" class="form-control form-control-alternative" placeholder="Postal code">
+                                                <label class="form-control-label" for="input-country">CAP</label>
+                                                <input type="number" id="input-postal-code" class="form-control form-control-alternative" placeholder="CAP">
                                             </div>
                                         </div>
                                     </div>
