--- a/AreaStudente/Views/Studenti/Show.cshtml
+++ b/AreaStudente/Views/Studenti/Show.cshtml
@@ -92,28 +92,28 @@
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="form-group focused">
-                                                <label class="form-control-label" for="input-username">Username generato</label>
-                                                <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Username" value="">
+                                                <label class="form-control-label" for="input-first-name">Nome</label>
+                                                <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="Nome" value="" readonly>
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="form-group">
-                                                <label class="form-control-label" for="input-email">Indirizzo Email</label>
-                                                <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="unigen@esempio.com">
+                                                <label class="form-control-label" for="input-last-name">Cognome</label>
+                                                <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Cognome" readonly>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="form-group focused">
-                                                <label class="form-control-label" for="input-first-name">Nome</label>
-                                                <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="Nome" value="">
+                                                <label class="form-control-label" for="input-email">Indirizzo Email</label>
+                                                <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="unigen@esempio.com" value="" readonly>
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="form-group focused">
-                                                <label class="form-control-label" for="input-last-name">Cognome</label>
-                                                <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Cognome" value="">
+                                                <label class="form-control-label" for="input-date">Data di Nascita</label>
+                                                <input type="text" id="input-date" class="form-control form-control-alternative" placeholder="Data di Nascita" value="" readonly>
                                             </div>
                                         </div>
                                     </div>
