Navbar modified for our solution

--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -26,18 +26,10 @@
 </head>
 <body>
 	<div class="bg-black pb-1">
-		<div class="container d-flex flex-column">
-			<div class="d-flex justify-content-end mb-2 mt-1">
-				<!-- Pulsanti in alto a destra -->
-				<div class="d-flex gap-2">
-					<a href="#" class="btn btn-light btn-sm"><i class="bi bi-envelope"></i> Webmail</a>
-					<a href="#" class="btn btn-light btn-sm"><i class="bi bi-person-circle"></i> Area Studente</a>
-				</div>
-			</div>
-
-			<div class="d-flex justify-content-between align-items-center flex-wrap">
+		<div class="d-flex flex-column">
+			<div class="d-flex justify-content-between align-items-center flex-wrap mx-3">
 				<div>
-					<a href="#"><img src="~/css/resources/logo.png" height="50px"></a>
+					<a href="#"><img src="/resources/logo.png" height="50px"></a>
 				</div>
 
 				<div>
@@ -49,7 +41,7 @@
 	<header>
 		<div class="sticky-top">
 			<nav class="navbar navbar-expand-lg navbar-custom">
-				<div class="container">
+				<div class="mx-3">
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
