--- a/AreaStudente/wwwroot/css/show.css
+++ b/AreaStudente/wwwroot/css/show.css
@@ -738,11 +738,11 @@ textarea.form-control {
     border-radius: .375rem;
 }
 
-.dropdown {
+/*.dropdown {
     position: relative;
-}
+}*/
 
-.dropdown-menu {
+/*.dropdown-menu {
     font-size: 1rem;
     position: absolute;
     z-index: 1000;
@@ -761,34 +761,34 @@ textarea.form-control {
     background-color: #fff;
     background-clip: padding-box;
     box-shadow: 0 50px 100px rgba(50, 50, 93, .1), 0 15px 35px rgba(50, 50, 93, .15), 0 5px 15px rgba(0, 0, 0, .1);
-}
+}*/
 
-    .dropdown-menu.show {
+    /*.dropdown-menu.show {
         display: block;
         opacity: 1;
-    }
+    }*/
 
-.dropdown-menu-right {
+/*.dropdown-menu-right {
     right: 0;
     left: auto;
-}
+}*/
 
-.dropdown-menu[x-placement^='top'],
+/*.dropdown-menu[x-placement^='top'],
 .dropdown-menu[x-placement^='right'],
 .dropdown-menu[x-placement^='bottom'],
 .dropdown-menu[x-placement^='left'] {
     right: auto;
     bottom: auto;
-}
+}*/
 
-.dropdown-divider {
+/*.dropdown-divider {
     overflow: hidden;
     height: 0;
     margin: .5rem 0;
     border-top: 1px solid #e9ecef;
-}
+}*/
 
-.dropdown-item {
+/*.dropdown-item {
     font-weight: 400;
     display: block;
     clear: both;
@@ -799,34 +799,34 @@ textarea.form-control {
     color: #212529;
     border: 0;
     background-color: transparent;
-}
+}*/
 
-    .dropdown-item:hover,
+    /*.dropdown-item:hover,
     .dropdown-item:focus {
         text-decoration: none;
         color: #16181b;
         background-color: #f6f9fc;
-    }
+    }*/
 
-    .dropdown-item:active {
+    ./*dropdown-item:active {
         text-decoration: none;
         color: #fff;
         background-color: #5e72e4;
-    }
+    }*/
 
-    .dropdown-item:disabled {
+    /*.dropdown-item:disabled {
         color: #8898aa;
         background-color: transparent;
-    }
+    }*/
 
-.dropdown-header {
+/*.dropdown-header {
     font-size: .875rem;
     display: block;
     margin-bottom: 0;
     padding: .5rem 1.5rem;
     white-space: nowrap;
     color: #8898aa;
-}
+}*/
 
 .input-group {
     position: relative;
@@ -916,15 +916,15 @@ textarea.form-control {
     border-bottom-left-radius: 0;
 }
 
-.nav {
+/*.nav {
     display: flex;
     margin-bottom: 0;
     padding-left: 0;
     list-style: none;
     flex-wrap: wrap;
-}
+}*/
 
-.nav-link {
+/*.nav-link {
     display: block;
     padding: .25rem .75rem;
 }
@@ -932,53 +932,53 @@ textarea.form-control {
     .nav-link:hover,
     .nav-link:focus {
         text-decoration: none;
-    }
+    }*/
 
-.navbar {
+/*.navbar {
     position: relative;
     display: flex;
     padding: 1rem 1rem;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-}
+}*/
 
-    .navbar > .container,
+    /*.navbar > .container,
     .navbar > .container-fluid {
         display: flex;
         flex-wrap: wrap;
         align-items: center;
         justify-content: space-between;
-    }
+    }*/
 
-.navbar-nav {
+/*.navbar-nav {
     display: flex;
     flex-direction: column;
     margin-bottom: 0;
     padding-left: 0;
     list-style: none;
-}
+}*/
 
-    .navbar-nav .nav-link {
+    /*.navbar-nav .nav-link {
         padding-right: 0;
         padding-left: 0;
-    }
+    }*/
 
-    .navbar-nav .dropdown-menu {
+   /* .navbar-nav .dropdown-menu {
         position: static;
         float: none;
-    }
+    }*/
 
-@media (max-width: 767.98px) {
+/*@media (max-width: 767.98px) {
 
     .navbar-expand-md > .container,
     .navbar-expand-md > .container-fluid {
         padding-right: 0;
         padding-left: 0;
     }
-}
+}*/
 
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
     .navbar-expand-md {
         flex-flow: row nowrap;
         justify-content: flex-start;
@@ -1001,16 +1001,16 @@ textarea.form-control {
         .navbar-expand-md > .container-fluid {
             flex-wrap: nowrap;
         }
-}
+}*/
 
-.navbar-dark .navbar-nav .nav-link {
+/*.navbar-dark .navbar-nav .nav-link {
     color: rgba(255, 255, 255, .95);
-}
+}*/
 
-    .navbar-dark .navbar-nav .nav-link:hover,
+    /*.navbar-dark .navbar-nav .nav-link:hover,
     .navbar-dark .navbar-nav .nav-link:focus {
         color: rgba(255, 255, 255, .65);
-    }
+    }*/
 
 .card {
     position: relative;
@@ -1360,9 +1360,9 @@ a.text-white:focus {
         min-width: 992px !important;
     }
 
-    .navbar {
+    /*.navbar {
         display: none;
-    }
+    }*/
 }
 
 figcaption,
@@ -1539,14 +1539,14 @@ a.text-white:focus {
         position: absolute;
         left: 50%;
         max-width: 180px;
-        transition: all .15s ease;
+        /*transition: all .15s ease;*/
         transform: translate(-50%, -30%);
         border-radius: .375rem;
     }
 
-        .card-profile-image img:hover {
+        /*.card-profile-image img:hover {
             transform: translate(-50%, -33%);
-        }
+        }*/
 
 .card-profile-stats {
     padding: 1rem 0;
@@ -1577,7 +1577,7 @@ a.text-white:focus {
     position: relative;
 }
 
-    .main-content .navbar-top {
+    /*.main-content .navbar-top {
         position: absolute;
         z-index: 1;
         top: 0;
@@ -1586,7 +1586,7 @@ a.text-white:focus {
         padding-right: 0 !important;
         padding-left: 0 !important;
         background-color: transparent;
-    }
+    }*/
 
 @media (min-width: 768px) {
     .main-content .container-fluid {
@@ -1595,46 +1595,46 @@ a.text-white:focus {
     }
 }
 
-.dropdown {
+/*.dropdown {
     display: inline-block;
-}
+}*/
 
-.dropdown-menu {
+/*.dropdown-menu {
     min-width: 12rem;
-}
+}*/
 
-    .dropdown-menu .dropdown-item {
+    /*.dropdown-menu .dropdown-item {
         font-size: .875rem;
         padding: .5rem 1rem;
-    }
+    }*/
 
-        .dropdown-menu .dropdown-item > i {
+        /*.dropdown-menu .dropdown-item > i {
             font-size: 1rem;
             margin-right: 1rem;
             vertical-align: -17%;
-        }
+        }*/
 
-.dropdown-header {
+/*.dropdown-header {
     font-size: .625rem;
     font-weight: 700;
     padding-right: 1rem;
     padding-left: 1rem;
     text-transform: uppercase;
     color: #f6f9fc;
-}
+}*/
 
-.dropdown-menu a.media > div:first-child {
+/*.dropdown-menu a.media > div:first-child {
     line-height: 1;
-}
+}*/
 
-.dropdown-menu a.media p {
+/*.dropdown-menu a.media p {
     color: #8898aa;
-}
+}*/
 
-.dropdown-menu a.media:hover .heading,
+/*.dropdown-menu a.media:hover .heading,
 .dropdown-menu a.media:hover p {
     color: #172b4d !important;
-}
+}*/
 
 .footer {
     padding: 2.5rem 0;
@@ -1893,7 +1893,7 @@ textarea[resize='horizontal'] {
     border-color: rgba(255, 255, 255, .9);
 }
 
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
     .navbar .dropdown-menu {
         margin: 0;
         pointer-events: none;
@@ -1943,9 +1943,9 @@ textarea[resize='horizontal'] {
             opacity: 0;
         }
     }
-}
+}*/
 
-@media (max-width: 767.98px) {
+/*@media (max-width: 767.98px) {
     .navbar-nav .nav-link {
         padding: .625rem 0;
         color: #172b4d !important;
@@ -1955,7 +1955,7 @@ textarea[resize='horizontal'] {
         min-width: auto;
         box-shadow: none;
     }
-}
+}*/
 
 @keyframes show-navbar-collapse {
     0% {
@@ -2028,6 +2028,6 @@ p {
     }
 }
 
-#navbar .navbar {
+/*#navbar .navbar {
     margin-bottom: 20px;
-}
+}*/
