--- a/AreaStudente/Views/Studenti/Show.cshtml
+++ b/AreaStudente/Views/Studenti/Show.cshtml
@@ -32,7 +32,7 @@
     <!-- Page content -->
     <div class="container-fluid mt--7">
         @* Mostra il contenuto solo se il modello ha dati validi (es. ID > 0) *@
-       @*  @if (Model != null)
+        @*  @if (Model != null && Model.K_Studente != Guid.Empty && ViewBag.ErrorMessage == null)
         { *@
             <div class="row">
                 <div class="col-xl-4 order-xl-2 mb-5 mb-xl-0">
@@ -182,7 +182,7 @@
                     </div>
                 </div>
             </div>
-        } @* Fine del blocco @if (Model != null && Model.Id > 0) *@
+       @*  } *@ @* Fine del blocco @if (Model != null && Model.Id > 0) *@
        @*  else if (ViewBag.Message == null) // Mostra un messaggio se non c'è un modello valido E non c'è già un messaggio da ViewBag
         {
             <div class="row justify-content-center">
