--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
 
 
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#">FAQ</a>
+								<a class="nav-link active" aria-current="page" asp-area="" asp-controller="Faq" asp-action="Faq">FAQ</a>
 							</li>
 
 							<li class="nav-item">
