--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -61,7 +61,7 @@
 															}
 															else if (comunicazione.K_Docente == null && comunicazione.K_Studente == null)
 															{
-																<p class="fw-bold mb-0 text-primary">
+																<p class="fw-bold mb-0 text-sucesss">
 																	@("Amministrazione")
 																</p>
 															}
