--- a/Comunicazioni/Views/Shared/_Layout.cshtml
+++ b/Comunicazioni/Views/Shared/_Layout.cshtml
@@ -123,7 +123,7 @@
 										//solo se l'utente è un docente o un operatore potrà accedere a questa funzione
 										{
 											<li class="nav-item">
-												<a class="dropdown-item" asp-area="" asp-controller="Comunicazioni" asp-action="Add"> Inserisci una Comunicazione</a>
+												<a class="dropdown-item" asp-area="" asp-controller="Comunicazioni" asp-action="Add"> Inserisci una nuova Comunicazione</a>
 											</li>
 										}
 									</ul>
