--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -1,90 +1,102 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model List<Comunicazioni.Models.Entities.Comunicazione>
+@model List<IGrouping<Guid, Comunicazioni.Models.Entities.Comunicazione>>
 
 <h1>Comunicazioni</h1>
 <table class="table">
-	<thead>
-		<tr>
-			<th>Ruolo Mittente</th>
-			<th>Destinatari</th>
-			<th>Comunicazione</th>
-		</tr>
-	</thead>
-	<tbody>
-		@foreach (var comunicazione in Model)
-		{
-			<tr>
-				<td>
-					@comunicazione.Soggetto
-				</td>
-				<td>
-					@if (comunicazione.Esami == null || comunicazione.Esami.TitoloEsame == null)
-					{
-						@:Comunicazione generale
-					}
-					else
-					{
-						@($"Comunicazione destinata a: {comunicazione.Esami.TitoloEsame}")
-					}
-				</td>
-				<td>
-					<div class="accordion" id="accordionExample">
-						<div class="accordion-item">
-							<h2 class="accordion-header">
-								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@comunicazione.Codice_Comunicazione" aria-expanded="true" aria-controls="collapse_@comunicazione.Codice_Comunicazione">
-									@($"Comunicazione numero: {comunicazione.Codice_Comunicazione}")
-								</button>
-							</h2>
-							<div id="collapse_@comunicazione.Codice_Comunicazione" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-								<div class="accordion-body">
-									<div class="col-md-6 col-lg-7 col-xl-8">
-										<ul class="list-unstyled">
-											<li class="d-flex justify-content-between mb-4">
-												<div class="card">
-													<div class="card-header d-flex justify-content-between p-3">
-														<div class="d-flex justify-content-between align-items-baseline">
-
-
-															@if (comunicazione.K_Docente != null && comunicazione.K_Studente == null)
-															{
-																<p class="fw-bold mb-0 text-danger">
-																	@($"{comunicazione.Docente.Nome} {comunicazione.Docente.Cognome} - {comunicazione.Soggetto}")
-																</p>
-															}
-															else if (comunicazione.K_Studente != null && comunicazione.K_Docente == null)
-															{
-																<p class="fw-bold mb-0 text-primary">
-																	@($"{comunicazione.Studente.Nome} {comunicazione.Studente.Cognome} - {comunicazione.Soggetto}")
-																</p>
-															}
-															else if (comunicazione.K_Docente == null && comunicazione.K_Studente == null)
-															{
-																<p class="fw-bold mb-0 text-sucesss">
-																	@("Amministrazione")
-																</p>
-															}
-
-															<span class="px-2"></span>
-															<p class="text-muted small mb-0"><i class="far fa-clock"></i>@comunicazione.DataOraComunicazione</p>
-														</div>
-													</div>
-													<div class="card-body">
-														<p class="mb-0">
-															@comunicazione.Testo
-														</p>
-													</div>
-												</div>
-											</li>
-										</ul>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</td>
-			</tr>
-		}
-	</tbody>
+    <thead>
+        <tr>
+            <th>Ruolo Mittente</th>
+            <th>Destinatari</th>
+            <th>Comunicazione</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var gruppo in Model)
+        {
+            <tr>
+                <td>
+                    @gruppo.First().Soggetto
+                </td>
+                <td>
+                    @if (gruppo.First().Esami == null || gruppo.First().Esami.TitoloEsame == null)
+                    {
+                        @:Comunicazione generale
+                    }
+                    else
+                    {
+                        @($"Comunicazione destinata a: {gruppo.First().Esami.TitoloEsame}")
+                    }
+                </td>
+                <td>
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@gruppo.Key" aria-expanded="true" aria-controls="collapse_@gruppo.Key">
+                                    Comunicazione numero: @gruppo.Key
+                                   @*  .Key è in comando Linq per indicare la chiavbe usata per il group by  *@
+                                </button>
+                            </h2>
+                            <div id="collapse_@gruppo.Key" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <div class="col-md-6 col-lg-7 col-xl-8">
+                                        <ul class="list-unstyled">
+                                            @foreach (var comunicazione in gruppo)
+                                            {
+                                                <li class="d-flex justify-content-between mb-4">
+                                                    <div class="card">
+                                                        <div class="card-header d-flex justify-content-between p-3">
+                                                            <div class="d-flex justify-content-between align-items-baseline">
+                                                                @if (comunicazione.K_Docente != null && comunicazione.K_Studente == null)
+                                                                {
+                                                                    <p class="fw-bold mb-0 text-danger">
+                                                                        @($"{comunicazione.Docente.Nome} {comunicazione.Docente.Cognome} - {comunicazione.Soggetto}")
+                                                                    </p>
+                                                                }
+                                                                else if (comunicazione.K_Studente != null && comunicazione.K_Docente == null)
+                                                                {
+                                                                    <p class="fw-bold mb-0 text-primary">
+                                                                        @($"{comunicazione.Studente.Nome} {comunicazione.Studente.Cognome} - {comunicazione.Soggetto}")
+                                                                    </p>
+                                                                }
+                                                                else if (comunicazione.K_Docente == null && comunicazione.K_Studente == null)
+                                                                {
+                                                                    <p class="fw-bold mb-0 text-successs">
+                                                                        @("Amministrazione")
+                                                                    </p>
+                                                                }
+                                                                <span class="px-2"></span>
+                                                                <p class="text-muted small mb-0"><i class="far fa-clock"></i>@comunicazione.DataOraComunicazione</p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="card-body">
+                                                            <p class="mb-0">
+                                                                @comunicazione.Testo
+                                                            </p>
+                                                        </div>
+                                                    </div>
+                                                </li>
+                                            }
+                                            <li class="bg-white">
+                                                <form method="post" asp-action="AddRisposta">
+                                                    <input type="hidden" name="Codice_Comunicazione" value="@gruppo.Key" />
+                                                    <input type="hidden" name="K_Esame" value="@gruppo.First().K_Esame" />
+                                                    <div data-mdb-input-init class="form-outline">
+                                                        <textarea class="form-control bg-body-tertiary" id="textAreaExample2" rows="4" name="Testo"></textarea>
+                                                        <label class="form-label" for="textAreaExample2">Message</label>
+                                                    </div>
+                                                    <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-info btn-rounded float-end p-0 px-2">Send</button>
+                                                </form>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
