--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -62,7 +62,7 @@
                                                                 }
                                                                 else if (comunicazione.K_Docente == null && comunicazione.K_Studente == null)
                                                                 {
-                                                                    <p class="fw-bold mb-0 text-successs">
+                                                                    <p class="fw-bold mb-0 text-success">
                                                                         @("Amministrazione")
                                                                     </p>
                                                                 }
